<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fondo"
    tools:context="com.example.aleja.definitiva.EditarRestauranteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="510dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtNombreEdit"
            android:layout_alignParentStart="true"
            android:text="@string/lblNombre"
            style="@style/MiEstilo"/>

        <EditText
            android:id="@+id/txtNombreEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/lblNombre"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblNombre"
            android:layout_marginTop="19dp"
            android:text="@string/lblCategoria"
            style="@style/MiEstilo"/>

        <Spinner
            android:id="@+id/spinCategoriaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/lblCategoria"
            android:layout_toEndOf="@+id/lblCategoria" />

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinCategoriaEdit"
            android:layout_marginTop="17dp"
            android:text="@string/lblDescripcion"
            style="@style/MiEstilo"/>

        <EditText
            android:id="@+id/txtDescripcionEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblDescripcion"
            android:ems="10"
            android:inputType="textMultiLine" />

        <RatingBar
            android:id="@+id/barraValoracionEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescripcionEdit"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapEditar"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/barraValoracionEdit" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mapEditar"
            android:layout_alignEnd="@+id/txtNombreEdit"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="519dp" />

        <Button
            android:id="@+id/btnFotoEdit"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imgEdit"
            android:layout_below="@+id/barraValoracionEdit"
            android:onClick="fotoEdit"
            android:text="@string/btnFoto" />

        <Button
            android:id="@+id/btnMapaEdit"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mapEditar"
            android:layout_alignEnd="@+id/mapEditar"
            android:text="@string/btnUbicacion" />

        <Button
            android:id="@+id/btnGaleriaEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnFotoEdit"
            android:layout_below="@+id/btnFotoEdit"
            android:onClick="galeriaEdit"
			style="@style/Boton"
            android:text="@string/btnGaleria" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
