<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aleja.definitiva.VerRestauranteActivity"
    tools:showIn="@layout/activity_ver_restaurante">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="510dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtNombre"
            android:layout_alignParentStart="true"
            android:text="@string/lblNombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/lblNombre"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblNombre"
            android:layout_marginTop="19dp"

            android:text="@string/lblCategoria" />

        <EditText
            android:id="@+id/spinCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_alignTop="@+id/lblCategoria"
            android:layout_toEndOf="@+id/lblCategoria" />

        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinCategoria"
            android:layout_marginTop="17dp"
            android:text="@string/lblDescripcion" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:enabled="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lblDescripcion"

            android:ems="10"
            android:inputType="textMultiLine" />

        <RatingBar
            android:id="@+id/barraValoracionVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescripcion"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5" />
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/barraValoracionVer"
            tools:context="com.example.aleja.definitiva.VerRestauranteActivity" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/barraValoracionVer" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
